--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ sysinfo.txt
 /Art.Src/Refs
 /Unity/TowerGenerator/.vsconfig
 /Unity/TowerGenerator/Logs
+Unity/TowerGenerator/UserSettings/Layouts/default-2021.dwlt
+Unity/TowerGenerator/UserSettings/Search.settings
