+ versionhistory submodule added

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Unity/TowerGenerator/Assets/Libs/GameLib"]
 	path = Unity/TowerGenerator/Assets/Libs/GameLib
 	url = git@bitbucket.org:yarilostudio/gamelib.git
+[submodule "Unity/TowerGenerator/Assets/Libs/VersionHistory"]
+	path = Unity/TowerGenerator/Assets/Libs/VersionHistory
+	url = git@bitbucket.org:yarilostudio/versionhistory.git
