change: update to new random (WIP)

--- a/TowerGenerator.asmdef
+++ b/TowerGenerator.asmdef
@@ -5,7 +5,8 @@
         "GUID:e374adf4b521a744cbe1f65144dbb05a",
         "GUID:cec6ca78d9ef46a4480a4891fd7a52db",
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
-        "GUID:478a2357cc57436488a56e564b08d223"
+        "GUID:478a2357cc57436488a56e564b08d223",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
