change: replace old gamelib event system with vitalrouter

--- a/TowerGenerator.asmdef
+++ b/TowerGenerator.asmdef
@@ -6,7 +6,8 @@
         "GUID:cec6ca78d9ef46a4480a4891fd7a52db",
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
         "GUID:478a2357cc57436488a56e564b08d223",
-        "GUID:d8b63aba1907145bea998dd612889d6b"
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:77aea589fe3f34fa883d9f7e26eee12e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
